# shuttle-codec

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.es.md  README.md  SECURITY.md  build.py  create_demo.py  download_ffmpeg.py  promocion_y_release.txt  pyproject.toml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: app.py  ffmpeg_downloader.py  ffmpeg_handler.py  i18n.py  main.py  presets.py
tests/: test_ffmpeg_downloader.py  test_ffmpeg_handler.py  test_i18n.py
