[project]
name = "shuttle-codec"
version = "1.0.0"
description = "Una GUI de escritorio moderna y fácil de usar para FFmpeg"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
dependencies = [
    "PyQt5>=5.15.0",
]

[project.scripts]
shuttle-codec = "src.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
